syntax = "proto3";

package rivet.backend.pkg.mm.lobby_get;

import "legacy/proto/common.proto";
import "legacy/proto/backend/matchmaker.proto";

message Request {
	repeated rivet.common.Uuid lobby_ids = 1;
	bool include_stopped = 2;
}

message Response {
	repeated rivet.backend.matchmaker.Lobby lobbies = 1;
}
